--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ author: Paul Brauner <polux@google.com>
 description: A sample command-line application
 homepage: https://github.com/polux/pretty
 dev_dependencies:
+  args: any
   enumerators: any
   persistent: any
   propcheck: any
