--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A sample command-line application
 homepage: https://github.com/polux/pretty
 dev_dependencies:
   args: any
-  enumerators: any
-  persistent: any
-  propcheck: any
+  enumerators: '>=0.4.2 <0.5.0'
+  persistent: '>=0.7.4 <0.8.0'
+  propcheck: '>=0.3.5 <0.4.0'
   unittest: any
